--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.NumadSP22_Team24_A8"
         tools:targetApi="31">
         <activity
+            android:name=".ChatRoom"
+            android:exported="false" />
+        <activity
+            android:name=".ChatHistory"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
