--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
 }
 
 dependencies {
+    // Dependency for rendering gifs
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+    // Dependency for rendering notifications
     implementation("androidx.core:core-ktx:1.8.0")
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
