--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'com.google.firebase:firebase-messaging:22.0.0'
     implementation platform('com.google.firebase:firebase-bom:30.2.0')
+
+    // Dependency for rendering gifs
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+    // Dependency for rendering notifications
+    implementation("androidx.core:core-ktx:1.8.0")
 }
 
