--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/icon_24"
+        android:icon="@drawable/icon_puddle"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/icon_24"
+        android:roundIcon="@drawable/icon_puddle"
         android:supportsRtl="true"
         android:theme="@style/Theme.NumadSP22_Team24_A8"
         tools:targetApi="31">
@@ -24,6 +24,9 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NewChatActivity"
             android:exported="false" />
         <activity
             android:name=".StickerActivity"
