--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     // Dependency for rendering gifs
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     // Dependency for rendering notifications
