--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,12 @@
         tools:targetApi="31">
         <activity
             android:name=".SignupActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".LoginActivity"/>
         <activity
             android:name=".ChatRoom"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ChatHistory"/>
         <activity
             android:name=".ChatHistory"
             android:exported="false" />
@@ -27,10 +29,12 @@
             android:exported="false" />
         <activity
             android:name=".NewChatActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ChatHistory"/>
         <activity
             android:name=".StickerActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ChatRoom"/>
         <activity
             android:name=".LoginActivity"
             android:exported="true">
